reafactor: add color-main2: #6000ff

--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -15,6 +15,7 @@
 @theme {
   --color-main: #5046e5;
   --color-mainL: #eef2ff;
+  --color-main2: #6000ff;
   --color-subText: #9ca3af;
   --color-bgc: #f7f9fb;
   --color-inputBox: #f3f4f6;
