feat: add 2 colors(main2, .text-good)

--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -18,6 +18,7 @@
   --color-main2: #6000ff;
   --color-subText: #9ca3af;
   --color-bgc: #f7f9fb;
+  --color-bgc2: #faf5ff;
   --color-inputBox: #f3f4f6;
   --color-red: #fee2e1;
   --color-redL: #fef2f2;
@@ -76,4 +77,11 @@ select:focus {
   outline: none;
   box-shadow: none;
   border: none;
+}
+
+.text-good {
+  background: linear-gradient(180deg, #5046e5 50%, #9134eb 143.75%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
