--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -35,15 +35,17 @@
     --foreground: #ededed;
   }
 }
-
+* {
+  max-width: min(100svw, 100svh);
+}
 html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  height: 100%;
+  /* height: 100%; */
   /* font-size: 62.5%; */
   /* font-size: 2.5vw; */
-  font-size: clamp(62.5%, min(2.5vw, 1.15vh), 200%);
+  font-size: clamp(10px, min(2.5vw, 1.15vh), 200%);
   outline: none;
   margin: none;
   padding: none;
