--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -26,7 +26,7 @@
   --color-yellowL: #fefce8;
   --color-green: #58ba72;
   --color-greenL: #dcfce7;
-  --font-sans: "Noto Sans KR";
+  --font-sans: "Pretendard";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -35,9 +35,11 @@
     --foreground: #ededed;
   }
 }
+
 * {
   max-width: min(100svw, 100svh);
 }
+
 html {
   margin: 0;
   padding: 0;
@@ -50,11 +52,12 @@ html {
   margin: none;
   padding: none;
 }
+
 body {
   background: var(--background);
   color: var(--foreground);
   height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Pretendard", sans-serif;
   background-color: #f7f9fb;
 }
 
@@ -66,6 +69,7 @@ svg {
   display: block;
   max-width: 100%;
 }
+
 input,
 button,
 textarea,
