feat: add font pretendard

--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -37,6 +37,7 @@
 }
 * {
   max-width: min(100svw, 100svh);
+  outline: none;
 }
 html {
   margin: 0;
@@ -54,7 +55,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-pretendard), Arial, Helvetica, sans-serif;
   background-color: #f7f9fb;
 }
 
